# engram

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  VISION.md  install.sh  rust-toolchain.toml
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/engram-agent/: Cargo.toml
crates/engram-agent/src/: agent.rs  browser_cdp.rs  lib.rs  mcp.rs  skills_runtime.rs  skills_tools.rs  tool.rs  tools.rs
crates/engram-bench/: BENCHMARKS.md  Cargo.toml  SCALE-BENCHMARK.md  compare_external.py
crates/engram-bench/src/: main.rs
crates/engram-cli/: Cargo.toml
crates/engram-cli/src/: main.rs
crates/engram-cli/src/api/: mod.rs  sse.rs  types.rs
crates/engram-cli/src/cli/: daemon.rs  handlers.rs  mod.rs  output.rs
crates/engram-cli/src/tui/: app.rs  mod.rs  splash.rs  ui.rs
crates/engram-cli/src/tui/views/: agents.rs  autonomy.rs  chat.rs  help.rs  ledger.rs  memory.rs  mod.rs  schedule.rs  settings.rs  skills.rs  tasks.rs
crates/engram-cli/src/ui/: format.rs  markdown.rs  mod.rs  theme.rs
crates/engram-core/: Cargo.toml
crates/engram-core/src/: autonomy.rs  event.rs  ledger.rs  lib.rs  lifecycle.rs  scope.rs
crates/engram-eval/: Cargo.toml
crates/engram-eval/cases/: example-remember-recall.json
crates/engram-eval/src/: lib.rs  main.rs
crates/engram-gateway/: Cargo.toml
crates/engram-gateway/src/: gateway.rs  lib.rs  provider.rs  types.rs
crates/engram-memory/: Cargo.toml
crates/engram-memory/src/: embed.rs  lib.rs  region.rs  rerank.rs  static_embed.rs  store.rs
crates/engram-sched/: Cargo.toml
crates/engram-sched/src/: lib.rs  recur.rs  sched.rs  systemd.rs
crates/engram-skills/: Cargo.toml
crates/engram-skills/src/: capability.rs  host.rs  learn.rs  lib.rs  manifest.rs  registry.rs  swarm.rs
crates/engramd/: Cargo.toml
crates/engramd/assets/: index.html
crates/engramd/src/: agents.rs  budget.rs  channels.rs  checkpoints.rs  citation.rs  config.rs  conscious.rs  contradiction.rs  converse.rs  corpus.rs  dissent.rs  distill.rs  embedder.rs  flight_search.py  git.rs  hooks.rs  main.rs  reflection.rs  scope.rs  seed.rs  tasks.rs  telegram.rs  terminal.rs  weather.py  workspace.rs
crates/engramd/src/skills/: ab_significance.py  accessibility_audit_checklist.py  ad_copy_check.py  adr_template.py  air_quality.py  amdahl_speedup.py  android_compose_scaffold.py  angular_component_scaffold.py  api_versioning_advisor.py  app_store_release_checklist.py  arduino_sketch_scaffold.py  arxiv.py  aspnet_controller_scaffold.py  availability_calc.py  big_o_estimate.py  bleu_rouge_score.py  books.py  brand_voice_checklist.py  break_even.py  browser_automation_script_gen.py  business_model_canvas.py  c4_diagram_gen.py  cache_ttl_advisor.py  calc.py  cap_table.py  cap_theorem_advisor.py  capacity_planner.py  changelog_gen.py  chmod_calc.py  chord_progression_gen.py  citation_format.py  classification_metrics.py  cli_help_text_gen.py  cloud_service_picker.py  cmake_project_gen.py  code_complexity.py  code_smell_detect.py  cohort_retention.py  color.py  commit_lint.py  (+228 more)
deploy/: Dockerfile  README.md  engram.service  engram.socket
desktop/: README.md  UPDATER.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json  updater.capability.json.example
desktop/src-tauri/capabilities/: dashboard.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: ADR-0001-architecture.md  ARCHITECTURE.md  AUTONOMY.md  CLI.md  COVERAGE-ROADMAP.md  DESIGN.md  E2E-VERIFICATION.md  MEMORY-ARCHITECTURE.md  MEMORY-UPGRADE-PLAN.md  ROADMAP.md  STRATEGY.md  THREAT-MODEL.md  WEB-CAPABILITIES.md
scripts/: build_embedder.py  desktop.sh
