[workspace]
resolver = "2"
# The Tauri desktop shell is its own crate (pulls heavy GUI deps) - keep it out of the
# core workspace build/tests; build it with `cargo tauri` from desktop/.
exclude = ["desktop"]
members = [
    "crates/engram-core",
    "crates/engram-memory",
    "crates/engram-gateway",
    "crates/engram-skills",
    "crates/engram-sched",
    "crates/engram-agent",
    "crates/engramd",
    "crates/engram-bench",
    "crates/engram-eval",
    "crates/engram-cli",
]

[workspace.package]
version = "0.3.4"
edition = "2021"
rust-version = "1.82"
authors = ["Radoslav Tsvetkov <tsvetkov.rado@gmail.com>"]
license = "MIT"
description = "Engram - a brain-inspired, self-improving personal AI agent that costs nothing when idle"

[workspace.dependencies]
tokio = { version = "1", default-features = false }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Size is a headline metric (<15MB stripped musl). Optimise the release build for
# a small, fast-to-load binary; correctness of panics is traded for size in prod.
[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# Faster local iteration without sacrificing debuggability.
[profile.dev]
opt-level = 0
