[package]
name = "engram-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Engram benchmarks: paraphrase recall quality and binary/idle footprint"

[[bin]]
name = "engram-bench"
path = "src/main.rs"

[dependencies]
engram-core = { path = "../engram-core" }
engram-memory = { path = "../engram-memory" }
tempfile = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
