[package]
name = "engram-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "engram — the command-line and terminal-UI client for the Engram personal agent"

[[bin]]
name = "engram"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "io-std",
    "io-util",
    "time",
    "sync",
    "process",
    "signal",
] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
futures-util = "0.3"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
unicode-width = "0.2"

[features]
default = []
