[package]
name = "engram-skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Engram skill runtime: capability-sandboxed WASM programs that learn from use"

[dependencies]
engram-core = { path = "../engram-core" }
engram-memory = { path = "../engram-memory" }
engram-gateway = { path = "../engram-gateway" }
tokio = { workspace = true, features = ["rt"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# Pure-Rust WASM interpreter: tiny binary, deny-by-default sandbox, deterministic.
# Chosen over a JIT (Wasmtime) because skills orchestrate, they don't compute-crunch.
wasmi = "0.40"
blake3 = "1"
ed25519-dalek = "2"
getrandom = "0.2"
hex = "0.4"

[dev-dependencies]
wat = "1"
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
