[package]
name = "engramd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Engram daemon: wires memory, skills, gateway, scheduler, and ledger into a running agent"

[[bin]]
name = "engramd"
path = "src/main.rs"

[dependencies]
engram-core = { path = "../engram-core" }
engram-memory = { path = "../engram-memory" }
engram-gateway = { path = "../engram-gateway" }
engram-skills = { path = "../engram-skills" }
engram-sched = { path = "../engram-sched" }
engram-agent = { path = "../engram-agent" }
# To implement the engram_agent::Tool trait (schedule_task) here, where app.sched lives.
async-trait = "0.1"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time", "net", "sync"] }
axum = { version = "0.8", features = ["ws"] }
# Advisory home lock (flock, cfg(unix)) so a second daemon on one ENGRAM_HOME can't corrupt the ledger.
libc = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
# Compiles the built-in seed skill from WAT at first boot.
wat = "1"
# Messaging channels (Telegram getUpdates/sendMessage).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Voice endpoint audio encode/decode.
base64 = "0.22"
# Server-Sent Events stream for live board updates.
async-stream = "0.3"
futures-core = "0.3"
# OS secret store for the API key (desktop builds). Optional so the static musl VPS build,
# which has no Secret Service, stays dependency-free and uses the 0600 file fallback instead.
keyring = { version = "3", optional = true, default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
# Document text extraction for rich chat uploads (PDF / DOCX / XLSX / CSV). Optional + pure-Rust
# so it stays out of the tiny default/musl build; enabled by the desktop + Docker builds.
calamine = { version = "0.26", optional = true }
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }
pdf-extract = { version = "0.7", optional = true }

[features]
default = []
# Enable a real network LLM provider (otherwise the offline mock is used).
http = ["engram-gateway/http"]
# Enable interactive browser automation (Chrome DevTools Protocol).
browser-cdp = ["engram-agent/browser-cdp"]
# Persist the API key in the OS secret store (Keychain / libsecret / Credential Manager) instead
# of the 0600 file fallback. Enabled by the desktop build; off for the headless musl VPS build.
keyring = ["dep:keyring"]
# Extract text from uploaded PDF/DOCX/XLSX/CSV so the agent can read documents, not just images
# and plain text. Off by default to keep the tiny build small.
docs = ["dep:calamine", "dep:zip", "dep:pdf-extract"]
