[package]
name = "engram-desktop"
version = "0.1.0"
edition = "2021"
authors = ["Radoslav Tsvetkov <tsvetkov.rado@gmail.com>"]
description = "Engram desktop shell — a native window onto the local agent"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[[bin]]
name = "engram-desktop"
path = "src/main.rs"
